# Unknown-Launcher

./: Cargo.toml  README.md  index.html  main.ts  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.vue  login.css  main.rs  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: 32x32.rgba  icon.icns
src-tauri/src/: commands.rs  download.rs  launch.rs  lib.rs  main.rs
src/components/: LauncherUI.vue  Login.vue
src/html/: login.html  signup.html
