[package]
name = "UKMCL"
version = "0.0.1"
description = "This is the official Minecraft Launcher for the Unknown Group."
authors = ["The Unknown Group"]
edition = "2021"
repository = "https://github.com/TheUnknownGroup/UKMCL"
include = ["../src/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "unknown_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.41.1", features = ["full"] }
anyhow = "1.0.93"
reqwest = "0.12.9"

